examples/test/testpolicy13058.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13058
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key38: value8
      key14: value31
      key1: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value31
      podSelector:
        matchLabels:
          key30: value11
